# cacsi-driver

./: Dockerfile  NOTICE  README.md  build.ps1  build.sh  publish.ps1
.github/workflows/: docker-image.yml
deploy/: csi-driver.yaml  example-pod.yaml  test-pod.yaml
scripts/: deploy.sh  setup-ca.sh
src/: Cargo.toml  build.rs  build_in_docker.cmd  ca_manager.rs  cert_manager.rs  cert_monitor.rs  k8s_client.rs  main.rs  template_parser.rs
src/cert_service/: main.rs  service.rs
src/csi/: identity.rs  mod.rs  node.rs
src/proto/: cert_service.proto  csi.proto
